src not working so adjusted for now will restructure then

--- a/productlist.html
+++ b/productlist.html
@@ -15,7 +15,24 @@
 
 <body>
 
-    <script src="js/script.js"></script>
+    <section id="header">
+        <section id="header">
+            <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
+            <div>
+                <ul id="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="html/productlist.html">Shop</a></li>
+                    <li><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="hero">
+            <h2>Super value deals</h2>
+            <p>Save more with coupons & upto 70% off!</p>
+        </section>
+
+        <script src="js/script.js"></script>
 </body>
 
 </html>
