product images added and HTML added

--- a/html/productlist.html
+++ b/html/productlist.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
     <section id="header">
         <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
         <div>
@@ -40,10 +39,9 @@
 
     <section id="product1" class="section-p1">
         <div class="pro-container">
-            <div class="pro" onclick="window.location.href='sproduct.html';">
+            <div class="pro">
                 <img src="images/dumbell10kg.png" alt="">
                 <div class="des">
-                    <span>Omega Fitness company</span>
                     <h5>Dumbell - 10kg</h5>
                     <div class="star">
                         <i class="fas fa-star"></i>
@@ -54,10 +52,113 @@
                     </div>
                     <h4>€65</h4>
                 </div>
-                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
 
+            <div class="pro">
+                <img src="images/olympicbar.png" alt="">
+                <div class="des">
+                    <h5>Olympic Bar</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€90</h4>
+                </div>
+            </div>
 
+            <div class="pro">
+                <img src="images/adjustablebench.png" alt="">
+                <div class="des">
+                    <h5>Adjustable bench</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€260</h4>
+                </div>
+
+            </div>
+
+            <div class="pro">
+                <img src="images/plates.png" alt="">
+                <div class="des">
+                    <h5>Weight plates</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€70</h4>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="images/treadmill.png" alt="">
+                <div class="des">
+                    <h5>Treadmill</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€450</h4>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="images/recumbentbike.png" alt="">
+                <div class="des">
+                    <h5>Recumbent bike</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€820</h4>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="images/squatrack.png" alt="">
+                <div class="des">
+                    <h5>Squat rack</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€650</h4>
+                </div>
+            </div>
+
+            <div class="pro">
+                <img src="images/yogamat.png" alt="">
+                <div class="des">
+                    <h5>Yoga mat</h5>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <h4>€15</h4>
+                </div>
+            </div>
 
         </div>
     </section>
