checking search functionality

--- a/html/productlist.html
+++ b/html/productlist.html
@@ -11,9 +11,15 @@
 
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
+
+    <!-- bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
+
+
 
     <section id="header">
         <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
@@ -36,6 +42,11 @@
         <h2>Super value deals</h2>
         <p>Save more with coupons & upto 20% off!</p>
     </section>
+
+    <!-- Search form -->
+    <div class="active-cyan-4 mb-4">
+        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+    </div>
 
     <section id="product1" class="section-p1">
         <div class="pro-container">
