--- a/html/index.html
+++ b/html/index.html
@@ -8,22 +8,29 @@
     <title>Injay Fitness Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 </head>
 
 <body>
     <section id="header">
-        <a href="#"><img src="images/DBS.png" class="logo" alt=""></a>
+        <h4 class="logo">Injay Fitness Shop</h4>
+        <!-- <a href="#"><img src="images/DBS.png" class="logo" alt=""></a> -->
         <div>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="productlist.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                <li id="lg-bag"><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
+        </div>
+        <div id="mobile">
+            <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
+            <i id="bar" class="fa fa-outdent"></i>
         </div>
     </section>
 
@@ -35,7 +42,219 @@
         <button>Shop Now</button>
     </section>
 
+    <section id="feature">
+        <div class="fe-box">
+            <img src="images/features/f1.png" class="logo" alt="">
+            <h6>Free shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/features/f2.png" class="logo" alt="">
+            <h6>Online Order</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/features/f3.png" class="logo" alt="">
+            <h6>Save Money</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/features/f4.png" class="logo" alt="">
+            <h6>Promotions</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/features/f5.png" class="logo" alt="">
+            <h6>Customer Support</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/features/f6.png" class="logo" alt="">
+            <h6>Customer Support</h6>
+        </div>
+    </section>
 
+    <section id="producth1">
+        <h2>Featured Products</h2>
+        <p>New Equipments</p>
+        <div class="prh-container">
+            <div class="pr">
+                <img src="images/products/f11.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f12.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f13.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f19.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f15.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f16.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f17.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+            <div class="pr">
+                <img src="images/products/f18.jpg" class="logo" alt="">
+                <div class="des">
+                    <span>adidas</span>
+                    <h5>Cartoon Astronaut T-shirts</h5>
+                    <div class="star">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <h4>$78</h4>
+                </div>
+                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>company</h4>
+                    <ul>
+                        <li>
+                            <a href="#">about us</a>
+                            <a href="#">our services</a>
+                            <a href="#">privacy policy</a>
+                            <a href="#">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>get help</h4>
+                    <ul>
+                        <li>
+                            <a href="#">FAQ</a>
+                            <a href="#">shipping</a>
+                            <a href="#">returns</a>
+                            <a href="#">order status</a>
+                            <a href="#">payment options</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Online shop</h4>
+                    <ul>
+                        <li>
+                            <a href="#">Sign In</a>
+                            <a href="#">View Cart</a>
+                            <a href="#">My Wishlist</a>
+                            <a href="#">Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"> <i class="fa fa-facebook-official"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
