--- a/html/productlist.html
+++ b/html/productlist.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injay Fitness Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productstyle.css">
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 
     <!-- bootstrap link -->
@@ -18,9 +18,6 @@
 </head>
 
 <body>
-
-
-
     <section id="header">
         <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
         <div>
@@ -33,9 +30,9 @@
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
-        <div id="mobile">
+        <!-- <div id="mobile">
             <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
-        </div>
+        </div> -->
     </section>
 
     <section id="page-header">
@@ -174,7 +171,59 @@
         </div>
     </section>
 
+    <footer class="pro-footer">
+        <div class="pro-container">
+            <div class="pro-row">
+                <div class="pro-footer-col">
+                    <h4>company</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">about us</a>
+                            <a href="#">our services</a>
+                            <a href="#">privacy policy</a>
+                            <a href="#">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>get help</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">FAQ</a>
+                            <a href="#">shipping</a>
+                            <a href="#">returns</a>
+                            <a href="#">order status</a>
+                            <a href="#">payment options</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>Online shop</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">Sign In</a>
+                            <a href="#">View Cart</a>
+                            <a href="#">My Wishlist</a>
+                            <a href="#">Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"> <i class="fa fa-facebook-official"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
+
 
 </html>
