--- a/html/productlist.html
+++ b/html/productlist.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 
-    <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
@@ -33,7 +30,7 @@
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
-        <div id="mobile">
+        <div id="mobile" hidden>
             <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
         </div>
     </section>
@@ -43,14 +40,9 @@
         <p>Save more with coupons & upto 20% off!</p>
     </section>
 
-    <!-- Search form -->
-    <div class="active-cyan-4 mb-4">
-        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-    </div>
-
     <section id="product1" class="section-p1">
         <div class="pro-container">
-            <div class="pro">
+            <div class="pro" onclick="window.location='productView.html'">
                 <img src="images/dumbell10kg.png" alt="">
                 <div class="des">
                     <h5>Dumbell - 10kg</h5>
