--- a/html/productlist.html
+++ b/html/productlist.html
@@ -33,7 +33,12 @@
         </div> -->
     </section>
 
-    <section id="page-header">
+    <section id="page-header" style="position:relative; height: 50vh">
+        <div style="position:absolute; height: 10%; top:0; left: 0; z-index:-1;">
+            <video autoplay="autoplay" style="width:100vw; height:50vh; object-fit: cover; " loop muted>
+                <source src="images/production ID-4324465.mp4" type="video/mp4">
+            </video>
+        </div>
         <h2>Super value deals</h2>
         <p>Save more with coupons & upto 20% off!</p>
     </section>
