--- a/html/productlist.html
+++ b/html/productlist.html
@@ -10,12 +10,51 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productstyle.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="js/data.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 
 </head>
 
 <body>
+    <div class="modal-container" id="modalContainer">
+        <div class="modal">
+            <div class="modal-head">
+                <h4>Equipment Reservation Form</h4>
+                <span class="material-symbols-outlined" onclick="openModal();">
+                    close
+                </span>
+            </div>
+            <form class="modal-form" id="form" class="form">
+                <input class="text-field" placeholder="First Name" id="firstName" name="firstName" autocomplete="off" />
+                <input class="text-field" placeholder="Last Name" id="lastName" name="lastName" autocomplete="off" />
+                <input class="text-field" placeholder="Email ID" id="emailID" type="email" name="emailID"
+                    autocomplete="off" />
+                <span id="text"></span>
+                <input class="text-field" placeholder="Phone Number" type="phone" id="phone" name="phone"
+                    autocomplete="off" />
+                <span id="phoneValid"></span>
+                <textarea class="text-field" style="height: 100px;" placeholder="Address" name="address" id="address"
+                    autocomplete="off"></textarea>
+                <div class="container">
+                    <div class="buttons">
+                        <span id="fillDetails"></span>
+                        <!-- <input type="button" name="submit" value="Reserve Now" class="reserveBtn" onclick="confirmAlert()"/> -->
+                        <!-- <input type="button" name="submit" value="Reserve Now" class="reserveBtn" onclick="confirmAlert()" /> -->
+                        <input type="button" name="submit" value="Reserve Now" class="reserveBtn"
+                            onclick="validationFunction()" />
+                        <!-- <a class="reserveBtn" name='registration' onclick="confirmAlert()">Reserve Now</a> -->
+                    </div>
+                </div>
+                <!-- <button id="reserveBtn" onclick="confirmAlert()">Reserve Now</button> -->
+        </div>
+        </form>
+    </div>
+
+    <button class="cart-button" onclick="openModal();" style="margin-top: 17px; width:100%">Reserve Now</button>
+
     <section id="header">
         <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
         <div>
