product view html data population is done images changing basic css added

--- a/html/productView.html
+++ b/html/productView.html
@@ -10,6 +10,9 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productView.css">
+    <link rel="stylesheet" href="css/productstyle.css">
+    <script src="js/data.js"></script>
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 
 </head>
@@ -28,13 +31,23 @@
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
-        <!-- <div id="mobile" hidden>
-            <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
-        </div> -->
     </section>
 
+    <section id="prodetails" class="section-p1">
+        <div id="single-pro-image" class="single-pro-image">
+            <img src="images/hero.jpg" width="100%" id="MainImg" alt="">
 
+            <div id="small-img-group" class="small-img-group">
+            </div>
+        </div>
 
+        <div id="single-pro-details" class="single-pro-details">
+
+        </div>
+    </section>
+    <script>
+        singleProduct()
+    </script>
 </body>
 
 </html>
