search functionality implemented

--- a/html/productlist.html
+++ b/html/productlist.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="js/data.js"></script>
+    <script src="js/searchProducts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 
@@ -81,13 +82,15 @@
         <h2>Super value deals</h2>
         <p>Save more with coupons & upto 20% off!</p>
     </section>
+    <div class="search-products">
 
+        <label for="search">Search Users</label>
+        <input type="search" id="search" onkeyup="searchProduct()">
+    </div>
     <section id="product1" class="section-p1">
         <div class="pro-container" id="shopContainer">
 
 
-
-        </div>
     </section>
 
     <footer class="pro-footer">
