--- a/html/productlist.html
+++ b/html/productlist.html
@@ -70,7 +70,7 @@
         </div>
         <div id="mobile" hidden>
             <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
-        </div> -->
+        </div>
     </section>
 
     <section id="page-header" style="position:relative; height: 50vh">
