Removed the redundancy of css for the footer and removed the unnecessary pages, added footer on the product view

--- a/html/index.html
+++ b/html/index.html
@@ -7,24 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injay Fitness Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/productstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
 </head>
 
 <body>
     <section id="header">
         <h4 class="logo">Injay Fitness Shop</h4>
-        <!-- <a href="#"><img src="images/DBS.png" class="logo" alt=""></a> -->
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="productlist.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li id="lg-bag"><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="fa fa-times"></i></a>
             </ul>
         </div>
@@ -39,7 +37,7 @@
         <h2>Super value deals</h2>
         <h1>On all products</h1>
         <p>Save more with coupons & upto 70% off!</p>
-        <a href="">Shop Now</button>
+        <button><a href="productlist.html"  id="shopNow">Shop Now</a></button>
     </section>
 
     <section id="feature">
@@ -87,7 +85,6 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
             </div>
             <div class="pr">
                 <img src="images/products/f12.jpg" class="logo" alt="">
@@ -102,8 +99,7 @@
                         <i class="fa fa-star"></i>
                     </div>
                     <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
+               </div>
             </div>
             <div class="pr">
                 <img src="images/products/f13.jpg" class="logo" alt="">
@@ -204,12 +200,12 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
+    <footer class="pro-footer">
+        <div class="pro-container">
+            <div class="pro-row">
+                <div class="pro-footer-col">
                     <h4>company</h4>
-                    <ul>
+                    <ul class="pro-ul">
                         <li>
                             <a href="#">about us</a>
                             <a href="#">our services</a>
@@ -218,9 +214,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="pro-footer-col">
                     <h4>get help</h4>
-                    <ul>
+                    <ul class="pro-ul">
                         <li>
                             <a href="#">FAQ</a>
                             <a href="#">shipping</a>
@@ -230,9 +226,9 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="pro-footer-col">
                     <h4>Online shop</h4>
-                    <ul>
+                    <ul class="pro-ul">
                         <li>
                             <a href="#">Sign In</a>
                             <a href="#">View Cart</a>
@@ -241,7 +237,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer-col">
+                <div class="pro-footer-col">
                     <h4>follow us</h4>
                     <div class="social-links">
                         <a href="#"> <i class="fa fa-facebook-official"></i></a>
