--- a/html/productView.html
+++ b/html/productView.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Injay Fitness Shop</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
-
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productView.css">
     <link rel="stylesheet" href="css/productstyle.css">
@@ -60,9 +59,9 @@
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="productlist.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
@@ -80,6 +79,57 @@
 
         </div>
     </section>
+    <footer class="pro-footer">
+        <div class="pro-container">
+            <div class="pro-row">
+                <div class="pro-footer-col">
+                    <h4>company</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">about us</a>
+                            <a href="#">our services</a>
+                            <a href="#">privacy policy</a>
+                            <a href="#">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>get help</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">FAQ</a>
+                            <a href="#">shipping</a>
+                            <a href="#">returns</a>
+                            <a href="#">order status</a>
+                            <a href="#">payment options</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>Online shop</h4>
+                    <ul class="pro-ul">
+                        <li>
+                            <a href="#">Sign In</a>
+                            <a href="#">View Cart</a>
+                            <a href="#">My Wishlist</a>
+                            <a href="#">Help</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pro-footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"> <i class="fa fa-facebook-official"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                        <a href="#"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
     <script>
         singleProduct()
     </script>
