--- a/html/productlist.html
+++ b/html/productlist.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productstyle.css">
-    
+
     <!-- JavaScript -->
     <script src="js/data.js"></script>
     <script src="js/searchProducts.js"></script>
@@ -46,29 +47,25 @@
                 <div class="container">
                     <div class="buttons">
                         <span id="fillDetails"></span>
-                        <!-- <input type="button" name="submit" value="Reserve Now" class="reserveBtn" onclick="confirmAlert()"/> -->
-                        <!-- <input type="button" name="submit" value="Reserve Now" class="reserveBtn" onclick="confirmAlert()" /> -->
                         <input type="button" name="submit" value="Reserve Now" class="reserveBtn"
                             onclick="validationFunction()" />
-                        <!-- <a class="reserveBtn" name='registration' onclick="confirmAlert()">Reserve Now</a> -->
                     </div>
                 </div>
-                <!-- <button id="reserveBtn" onclick="confirmAlert()">Reserve Now</button> -->
         </div>
         </form>
     </div>
 
-    <button class="cart-button" onclick="openModal();" style="margin-top: 17px; width:100%">Reserve Now</button>
+    <!-- <button class="cart-button" onclick="openModal();" style="margin-top: 17px; width:100%">Reserve Now</button> -->
 
     <section id="header">
         <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
-                <li><a class="active" href="productlist.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
+                <li><a href="productlist.html">Shop</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
@@ -87,14 +84,11 @@
         <p>Save more with coupons & upto 20% off!</p>
     </section>
     <div class="search-products">
-
         <label for="search">Search Users</label>
         <input type="search" id="search" onkeyup="searchProduct()">
     </div>
     <section id="product1" class="section-p1">
         <div class="pro-container" id="shopContainer">
-
-
     </section>
 
     <footer class="pro-footer">
