adding javascript for addition and subtraction

--- a/html/productlist.html
+++ b/html/productlist.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -54,17 +55,13 @@
         </div>
         </form>
     </div>
-
-    <!-- <button class="cart-button" onclick="openModal();" style="margin-top: 17px; width:100%">Reserve Now</button> -->
-
     <section id="header">
-        <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
+        <h4 class="logo">Injay Fitness Shop</h4>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="productlist.html">Shop</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
                 <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
@@ -84,7 +81,7 @@
         <p>Save more with coupons & upto 20% off!</p>
     </section>
     <div class="search-products">
-        <label for="search">Search Users</label>
+        <label for="search">Search Items</label>
         <input type="search" id="search" onkeyup="searchProduct()">
     </div>
     <section id="product1" class="section-p1">
