--- a/html/productView.html
+++ b/html/productView.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/> -->
+    <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productView.css">
     <link rel="stylesheet" href="css/productstyle.css">
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
-    <!-- <link rel="stylesheet" href="D:\DBS\Classes\Web and Mobile Technologies\B9IS124_10508676_10612366_fitnessBusiness\fitnessBusiness\css\style.css"> -->
-
 </head>
 
 <body>
@@ -54,13 +52,12 @@
         </form>
     </div>
     <section id="header">
-        <a href="#"><img src="images/DBS.png" class="logo" alt="dbs logo"></a>
+        <h4 class="logo">Injay Fitness Shop</h4>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a class="active" href="productlist.html">Shop</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
                 <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
