--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +12,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
+        <!-- Navbar -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <!-- Hero -->
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section id="header">
+    <!-- <section id="header">
         <h4 class="logo">Injay Fitness Shop</h4>
         <div>
             <ul id="navbar">
@@ -29,14 +38,56 @@
             <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
             <i id="bar" class="fa fa-outdent"></i>
         </div>
-    </section>
+    </section> -->
+
+    <!-- navbar section -->
+    <div class="nav-container">
+        <p class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
+                fitness_center
+                </span></p>
+        <div class="navlink-container">
+            <a class="nav-link">Home</a>
+            <a class="nav-link">About</a>
+            <a class="nav-link">contact</a>
+            <a class="nav-link">Blog</a>
+            <span class="material-symbols-outlined cart-logo">
+                shopping_bag
+            </span>
+        </div>
+    </div>
+    <!-- hero section -->
+    <div class="hero-section">
+        <video class="hero-video" autoplay="autoplay" muted loop>
+            <source src="images/video/pexels-ron-lach-7674509.mp4"/>
+        </video>
+        <div class="hero-section-large-text">Equip your workouts..</div>
+    </div>
+
+    <!-- content section -->
+
+    <!-- last section -->
+    <div class="hero">
+        <div class="section">
+            <div>
+                <div class="hero6-content">
+                    <div class="hero6-text">
+                        <div class="largeHero-text">Stylish modern<br>lighting
+                            options</div>
+                    </div><a data-w-id="8d359ace-8c76-7ccb-ca22-b4580e2811e7" href="/all-products"
+                        class="button-small white-small w-inline-block"="1">
+                        <div class="button-label"="1">Shop the Fall Collection</div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section id="hero">
         <h4>Trade-in-offer</h4>
         <h2>Super value deals</h2>
         <h1>On all products</h1>
         <p>Save more with coupons & upto 70% off!</p>
-        <button><a href="productlist.html"  id="shopNow">Shop Now</a></button>
+        <button><a href="productlist.html" id="shopNow">Shop Now</a></button>
     </section>
 
     <section id="feature">
@@ -98,7 +149,7 @@
                         <i class="fa fa-star"></i>
                     </div>
                     <h4>$78</h4>
-               </div>
+                </div>
             </div>
             <div class="pr">
                 <img src="images/products/f13.jpg" class="logo" alt="">
