--- a/html/productView.html
+++ b/html/productView.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/productstyle.css">
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
