updated the product section and content section

--- a/html/productlist.html
+++ b/html/productlist.html
@@ -141,7 +141,7 @@
     </footer>
     <script src="js/script.js"></script>
     <script>
-        allProducts()
+        //allProducts()
     </script>
 </body>
 
