--- a/html/index.html
+++ b/html/index.html
@@ -12,39 +12,27 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/productstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
-        <!-- Navbar -->
+    <!-- Navbar -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
     <!-- Hero -->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap" rel="stylesheet">
+
+    <!-- scripts -->
+
+    <script src="js/data.js"></script>
 </head>
 
 <body>
-    <!-- <section id="header">
-        <h4 class="logo">Injay Fitness Shop</h4>
-        <div>
-            <ul id="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="productlist.html">Shop</a></li>
-                <li><a href="#">About</a></li>
-                <li id="lg-bag"><a href="#"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a></li>
-                <a href="#" id="close"><i class="fa fa-times"></i></a>
-            </ul>
-        </div>
-        <div id="mobile">
-            <a href="reserve.html"><i class="fa-sharp fa-solid fa fa-shopping-bag"></i></a>
-            <i id="bar" class="fa fa-outdent"></i>
-        </div>
-    </section> -->
-
     <!-- navbar section -->
     <div class="nav-container">
         <p class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
                 fitness_center
-                </span></p>
+            </span></p>
         <div class="navlink-container">
             <a class="nav-link">Home</a>
             <a class="nav-link">About</a>
@@ -58,197 +46,88 @@
     <!-- hero section -->
     <div class="hero-section">
         <video class="hero-video" autoplay="autoplay" muted loop>
-            <source src="images/video/pexels-ron-lach-7674509.mp4"/>
+            <source src="images/video/pexels-ron-lach-7674509.mp4" />
         </video>
         <div class="hero-section-large-text">Equip your workouts..</div>
     </div>
 
     <!-- content section -->
-
-    <!-- last section -->
-    <div class="hero">
+    <div class="content">
         <div class="section">
-            <div>
-                <div class="hero6-content">
-                    <div class="hero6-text">
-                        <div class="largeHero-text">Stylish modern<br>lighting
-                            options</div>
-                    </div><a data-w-id="8d359ace-8c76-7ccb-ca22-b4580e2811e7" href="/all-products"
-                        class="button-small white-small w-inline-block"="1">
-                        <div class="button-label"="1">Shop the Fall Collection</div>
-                    </a>
+            <div class="headline-grid">
+                <div>
+                    <div class="text-label">Shop gym equipments</div>
+                    <div class="text-label">WHAT THEY SAY</div>
+                    <div class="text-content-size">Stylish modern collection options</div>
                 </div>
             </div>
         </div>
     </div>
 
-    <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
-        <p>Save more with coupons & upto 70% off!</p>
-        <button><a href="productlist.html" id="shopNow">Shop Now</a></button>
-    </section>
+    <!-- products section -->
+    <div class="product">
+        <div class="section">
+            <div>
+                <div role="list" id="productGrid" class="product-grid">
+                    <div class="product-container" role="listitem">
+                        <div class="image-wrap">
+                            <div class="sale">
+                                SALE
+                            </div>
+  
+                            <div 
+                                style="background-image:url(images/bench/bench1.png)"
+                                class="product-image product-image-size-m">
+                            </div>
+                            <div class="view-product-container">
+                                <a style="opacity: 1;" class="view-button">
+                                    <div class="button-small white-small">
+                                        <div>View Product</div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="product4-content-wrap"><a class="size6-link">Giraffa</a>
+                            <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
+                                class="size4-text">$&nbsp;99.99&nbsp;USD</div>
+                        </div>
+                    </div>
 
-    <section id="feature">
-        <div class="fe-box">
-            <img src="images/features/f1.png" class="logo" alt="">
-            <h6>Free shipping</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/features/f2.png" class="logo" alt="">
-            <h6>Online Order</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/features/f3.png" class="logo" alt="">
-            <h6>Save Money</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/features/f4.png" class="logo" alt="">
-            <h6>Promotions</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/features/f5.png" class="logo" alt="">
-            <h6>Customer Support</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/features/f6.png" class="logo" alt="">
-            <h6>Customer Support</h6>
-        </div>
-    </section>
 
-    <section id="producth1">
-        <h2>Featured Products</h2>
-        <p>New Equipments</p>
-        <div class="prh-container">
-            <div class="pr">
-                <img src="images/products/f11.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
+
+                    <div class="product-container" role="listitem">
+                        <div class="image-wrap">
+                            <a style="opacity: 0;" class="item-overlay w-inline-block">
+                                <div class="button-small white-small"
+                                    style="transform: translate3d(0px, 8px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                    <div>View Product</div>
+                                </div>
+                            </a>
+                            <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_main_image_4dr.url%22%2C%22to%22%3A%22style.background-image%22%7D%5D"
+                                style="background-image:url(&quot;https://assets.website-files.com/5d9c8fcaca1c6c684c521b94/5d9c8fcaca1c6c8c24521e02_5d960fc6f8b06d476fdd2fb1_020-Giraffa_Black_Enviro2_300.jpeg&quot;)"
+                                class="product-image product-image-size-m">
+                                <div class="label inside-label w-condition-invisible">Featured
+                                </div>
+                                <div class="label black-label sale-label w-condition-invisible">On
+                                    Sale</div>
+                            </div>
+                        </div>
+                        <div class="product4-content-wrap"><a class="size6-link">Giraffa</a>
+                            <div data-wf-sku-bindings="%5B%7B%22from%22%3A%22f_price_%22%2C%22to%22%3A%22innerHTML%22%7D%5D"
+                                class="size4-text">$&nbsp;99.99&nbsp;USD</div>
+                        </div>
                     </div>
-                    <h4>$78</h4>
                 </div>
-            </div>
-            <div class="pr">
-                <img src="images/products/f12.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-            </div>
-            <div class="pr">
-                <img src="images/products/f13.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
-            </div>
-            <div class="pr">
-                <img src="images/products/f19.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
-            </div>
-            <div class="pr">
-                <img src="images/products/f15.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
-            </div>
-            <div class="pr">
-                <img src="images/products/f16.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
-            </div>
-            <div class="pr">
-                <img src="images/products/f17.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
-            </div>
-            <div class="pr">
-                <img src="images/products/f18.jpg" class="logo" alt="">
-                <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-shirts</h5>
-                    <div class="star">
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
-                </div>
-                <!-- <a href="#"><i class="fal fa-shopping-cart"></i></a> -->
             </div>
         </div>
-    </section>
+    </div>
+    </div>
+
+    <!-- last section -->
+    <div class="mid-sec">
+        <div class="mid-window" ></div>
+
+    </div>
 
     <footer class="pro-footer">
         <div class="pro-container">
@@ -303,6 +182,9 @@
     </footer>
 
     <script src="js/script.js"></script>
+    <script>
+        allProducts()
+    </script>
 </body>
 
 </html>
