--- a/html/productView.html
+++ b/html/productView.html
@@ -58,11 +58,11 @@
     <!-- navbar -->
     <div>
         <div class="nav-container">
-            <p class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
+            <a href="index.html" class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
                     fitness_center
-                </span></p>
+                </span></a>
             <div class="navlink-container">
-                <a class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
                 <a class="nav-link">About</a>
                 <a class="nav-link">contact</a>
                 <a class="nav-link">Blog</a>
@@ -77,7 +77,7 @@
     <div class="product-container">
         <div class="hero1">
             <div id="productContent" class="product-content">
-                <div class="discription-container">
+                <!-- <div class="discription-container">
                     <div class="product-name">
                         Dumbell
                     </div>
@@ -95,10 +95,10 @@
                         <div class="quantity-label">
                             quantity
                         </div>
-                        <input class="cart-field" value="1"/>
-                        <input class="cart-button" value="Add cart">
+                        <input  class="cart-field"/>
+                        <input class="cart-button" value="Reserve">
                     </form>
-                </div>
+                </div> -->
             </div>
             <div id="mainImage" class="main-img">
             </div>
