adjusted the sale symbol and pop up backgorund transparent

--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
             <div class="headline-grid">
                 <div>
                     <div class="text-label">Shop gym equipments</div>
-                    <input class="search-bar" placeholder="WHAT TO SEARCH" type="search" id="search"
+                    <input class="search-bar" placeholder="WHAT TO SEARCH" type="" id="search"
                         onkeyup="searchProduct()" />
                     <div class="text-content-size">Stylish modern collection options</div>
                 </div>
