added pics and ratings

--- a/html/productView.html
+++ b/html/productView.html
@@ -58,7 +58,7 @@
     <!-- navbar -->
     <div>
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
+            <a href="index.html" class="nav-logo">INJAY FITNESS STORE<span class="material-symbols-outlined dumble">
                     fitness_center
                 </span></a>
             <div class="navlink-container">
