--- a/html/productlist.html
+++ b/html/productlist.html
@@ -56,7 +56,7 @@
         </form>
     </div>
     <section id="header">
-        <h4 class="logo">Injay Fitness Shop</h4>
+        <h4 class="logo">INJAY FITNESS STORE</h4>
         <div>
             <ul id="navbar">
                 <li><a href="index.html">Home</a></li>
