--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
 <body>
     <!-- navbar section -->
     <div class="nav-container">
-        <p href="index.html" class="nav-logo">INJAY FITNESS<span class="material-symbols-outlined dumble">
+        <p href="index.html" class="nav-logo">INJAY FITNESS STORE<span class="material-symbols-outlined dumble">
                 fitness_center
             </span></p>
         <div class="navlink-container">
